syntax = "proto3";

package vou.proto;

import "google/protobuf/timestamp.proto";

option go_package = "VOU-Server/proto/gen";

message Voucher {
  int64 id = 1;
  int64 event_id = 2;
  string qr_code = 3;
  string type = 4;
  string status = 5;
  int32 discount = 6;
  google.protobuf.Timestamp expires_at = 7;
}

